# project7

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
applications/: step2_autoencoder.ipynb  step3_classifier.ipynb
applications/.ipynb_checkpoints/: step2_autoencoder-checkpoint.ipynb  step3_classifier-checkpoint.ipynb
nn/: __init__.py  nn.py  preprocess.py
test/: test.py
